--- a/roles/mas/vars/main.yml
+++ b/roles/mas/vars/main.yml
@@ -3,6 +3,7 @@ mas_email: ""
 mas_password: ""
 mas_installed_apps:
   - { id: 410628904, name: "Wunderlist" }
+  - { id: 771955779, name: "Gifted" }
 
 mas_upgrade_all_apps: no
 mas_signin_dialog: no
